; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_dbobject.c_acpi_db_decode_node.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_dbobject.c_acpi_db_decode_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_namespace_node = type { i32, i32 }

@.str = private unnamed_addr constant [27 x i8] c"<Node>          Name %4.4s\00", align 1
@ANOBJ_METHOD_ARG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c" [Method Arg]\00", align 1
@ANOBJ_METHOD_LOCAL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [16 x i8] c" [Method Local]\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c" Device\00", align 1
@.str.4 = private unnamed_addr constant [14 x i8] c" Thermal Zone\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.acpi_namespace_node*)* @acpi_db_decode_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acpi_db_decode_node(%struct.acpi_namespace_node* %0) #0 {
  %2 = alloca %struct.acpi_namespace_node*, align 8
  store %struct.acpi_namespace_node* %0, %struct.acpi_namespace_node** %2, align 8
  %3 = load %struct.acpi_namespace_node*, %struct.acpi_namespace_node** %2, align 8
  %4 = call i32 @acpi_ut_get_node_name(%struct.acpi_namespace_node* %3)
  %5 = call i32 (i8*, ...) @acpi_os_printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %4)
  %6 = load %struct.acpi_namespace_node*, %struct.acpi_namespace_node** %2, align 8
  %7 = getelementptr inbounds %struct.acpi_namespace_node, %struct.acpi_namespace_node* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @ANOBJ_METHOD_ARG, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = call i32 (i8*, ...) @acpi_os_printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %1
  %15 = load %struct.acpi_namespace_node*, %struct.acpi_namespace_node** %2, align 8
  %16 = getelementptr inbounds %struct.acpi_namespace_node, %struct.acpi_namespace_node* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @ANOBJ_METHOD_LOCAL, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %14
  %22 = call i32 (i8*, ...) @acpi_os_printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  br label %23

23:                                               ; preds = %21, %14
  %24 = load %struct.acpi_namespace_node*, %struct.acpi_namespace_node** %2, align 8
  %25 = getelementptr inbounds %struct.acpi_namespace_node, %struct.acpi_namespace_node* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  switch i32 %26, label %31 [
    i32 129, label %27
    i32 128, label %29
  ]

27:                                               ; preds = %23
  %28 = call i32 (i8*, ...) @acpi_os_printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  br label %35

29:                                               ; preds = %23
  %30 = call i32 (i8*, ...) @acpi_os_printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0))
  br label %35

31:                                               ; preds = %23
  %32 = load %struct.acpi_namespace_node*, %struct.acpi_namespace_node** %2, align 8
  %33 = call i32 @acpi_ns_get_attached_object(%struct.acpi_namespace_node* %32)
  %34 = call i32 @acpi_db_decode_internal_object(i32 %33)
  br label %35

35:                                               ; preds = %31, %29, %27
  ret void
}

declare dso_local i32 @acpi_os_printf(i8*, ...) #1

declare dso_local i32 @acpi_ut_get_node_name(%struct.acpi_namespace_node*) #1

declare dso_local i32 @acpi_db_decode_internal_object(i32) #1

declare dso_local i32 @acpi_ns_get_attached_object(%struct.acpi_namespace_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
